fix eb section titles and spacing

--- a/Hackonix-Website/static/css/oc-ec-styles.css
+++ b/Hackonix-Website/static/css/oc-ec-styles.css
@@ -53,7 +53,8 @@
   display: flex;
   min-height: 100%;
   justify-content: center;
-  padding: var(--spacing-xxl) var(--spacing-l);
+  /* padding: var(--spacing-xxl) var(--spacing-l); */
+  margin: 10rem 0rem;
 }
 
 .card-grid {
