--- a/Hackonix-Website/static/css/style.css
+++ b/Hackonix-Website/static/css/style.css
@@ -762,6 +762,7 @@ img {
   font-size: 1.75rem;
   letter-spacing: 0px;
   margin-bottom: 2rem;
+  font-weight: bolder;
 }
 
 .box {
